# oxyclock

./: .gitignore  Cargo.toml  README.md  justfile
package/: PKGBUILD
resources/: oxyclock.desktop
src/: components.rs  custom_theme.rs  main.rs  timer.rs  utils.rs
