[package]
name = "oxyclock"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = {git = "https://github.com/iced-rs/iced", branch = "master", features = ["debug", "tokio"]}
notify-rust = "4.11.3"
rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[profile.release]
codegen-units = 1
lto = "fat"
